a fix (bug #11215: BIGINT: can't set DEFAULT to minimum end-range)