sql/item.cc
@@ -3573,7 +3573,7 @@ Item *Item_int_with_ref::new_item()
 
 Item_num *Item_uint::neg()
 {
-  Item_decimal *item= new Item_decimal(value, 0);
+  Item_decimal *item= new Item_decimal(value, 1);
   return item->neg();
 }
 
